WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
227266
WKWebView loadSimulatedRequest does not set attribution value for url requests within html content
https://bugs.webkit.org/show_bug.cgi?id=227266
Summary
WKWebView loadSimulatedRequest does not set attribution value for url request...
Kate Cheney
Reported
2021-06-22 12:52:41 PDT
URL requests within HTML content loaded with loadSimulatedRequest should be marked with the correct attribution
Attachments
Patch
(5.26 KB, patch)
2021-06-22 13:11 PDT
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kate Cheney
Comment 1
2021-06-22 12:53:02 PDT
<
rdar://problem/79316911
>
Kate Cheney
Comment 2
2021-06-22 13:11:33 PDT
Created
attachment 431987
[details]
Patch
Brent Fulgham
Comment 3
2021-06-24 13:37:45 PDT
Comment on
attachment 431987
[details]
Patch r=me
EWS
Comment 4
2021-06-24 15:13:00 PDT
Committed
r279247
(
239131@main
): <
https://commits.webkit.org/239131@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 431987
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug