WKWebView loadSimulatedRequest does not set attribution value for url requests within html content https://bugs.webkit.org/show_bug.cgi?id=227266 <rdar://problem/79316911>

Reviewed by Brent Fulgham.

Source/WebKit:

We currently pass the attribution value from the main NSURLRequest
passed into WebPageProxy::loadRequest by setting a value on the WebPage
document loader that gets passed to all requests initiated by that main
navigation. This patch adds the same functionality for
WebPageProxy::loadSimulatedRequest, which could initiate URL requests
from HTML content.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::loadSimulatedRequest):
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::loadSimulatedRequestAndResponse):

Tools:

API test coverage.

* TestWebKitAPI/Tests/WebKitCocoa/InAppBrowserPrivacy.mm:


Canonical link: https://commits.webkit.org/239131@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279247 268f45cc-cd09-0410-ab3c-d52691b4dbfc